{
  "version": 4,
  "terraform_version": "0.15.5",
  "serial": 28,
  "lineage": "a479b03f-b50e-6c15-aed1-a720a2d35776",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "var_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-095556933a0f5eec4",
            "association_id": "eipassoc-0864dfbea0a104c76",
            "domain": "vpc",
            "id": "eipalloc-095556933a0f5eec4",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-08384a4b80ab5b26a",
            "private_dns": "ip-172-20-10-150.ap-south-1.compute.internal",
            "private_ip": "172.20.10.150",
            "public_dns": "ec2-13-126-125-12.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.126.125.12",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0567e0d2b4b2169ae",
            "arn": "arn:aws:ec2:ap-south-1:108900829372:instance/i-0742b5d63f26229aa",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0742b5d63f26229aa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "linux",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0006a4b33ce4a30e1",
            "private_dns": "ip-172-20-10-183.ap-south-1.compute.internal",
            "private_ip": "172.20.10.183",
            "public_ip": "65.0.103.145",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bbd757986145a244",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-092d774658cd2b71b",
            "tags": {
              "Name": "linux 1 (Jenkins/ansible)"
            },
            "tags_all": {
              "Name": "linux 1 (Jenkins/ansible)"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ab39d7e6ef1fc879"
            ]
          },
          "dependencies": [
            "aws_key_pair.var_keypair",
            "aws_security_group.var_sglinux1",
            "aws_subnet.var_subnet1",
            "aws_vpc.var_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "linux2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0567e0d2b4b2169ae",
            "arn": "arn:aws:ec2:ap-south-1:108900829372:instance/i-0bfacafea4b0bd4e6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0bfacafea4b0bd4e6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "key_name": "linux",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-032fa753224a6a39d",
            "private_dns": "ip-172-20-20-72.ap-south-1.compute.internal",
            "private_ip": "172.20.20.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0605bf71ecec1e724",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c19b4640bb989a7f",
            "tags": {
              "Name": "linux 2 (Tomcat)"
            },
            "tags_all": {
              "Name": "linux 2 (Tomcat)"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-039e2c8da5f664c62"
            ]
          },
          "dependencies": [
            "aws_key_pair.var_keypair",
            "aws_security_group.var_sglinux2",
            "aws_subnet.var_subnet2",
            "aws_vpc.var_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "var_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:108900829372:internet-gateway/igw-058eb232b7777ba7b",
            "id": "igw-058eb232b7777ba7b",
            "owner_id": "108900829372",
            "tags": {
              "Name": "ee-igw"
            },
            "tags_all": {
              "Name": "ee-igw"
            },
            "vpc_id": "vpc-0a0feeea6b829b7f1"
          },
          "dependencies": [
            "aws_vpc.var_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "var_natgw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-095556933a0f5eec4",
            "connectivity_type": "public",
            "id": "nat-0a59cfe5b656821cb",
            "network_interface_id": "eni-08384a4b80ab5b26a",
            "private_ip": "172.20.10.150",
            "public_ip": "13.126.125.12",
            "subnet_id": "subnet-092d774658cd2b71b",
            "tags": {
              "Name": "ee-NAT-GW"
            },
            "tags_all": {
              "Name": "ee-NAT-GW"
            }
          },
          "dependencies": [
            "aws_vpc.var_vpc",
            "aws_eip.var_ip",
            "aws_subnet.var_subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "var_r",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:108900829372:route-table/rtb-0cbdf874f9b4664f7",
            "id": "rtb-0cbdf874f9b4664f7",
            "owner_id": "108900829372",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-058eb232b7777ba7b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ee-rt"
            },
            "tags_all": {
              "Name": "ee-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0feeea6b829b7f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.var_gw",
            "aws_vpc.var_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "var_rt_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:108900829372:route-table/rtb-085d13fcd9c29505c",
            "id": "rtb-085d13fcd9c29505c",
            "owner_id": "108900829372",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a59cfe5b656821cb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ee-natroute"
            },
            "tags_all": {
              "Name": "ee-natroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0feeea6b829b7f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.var_natgw",
            "aws_subnet.var_subnet1",
            "aws_vpc.var_vpc",
            "aws_eip.var_ip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "var_rta1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aea70399fc62ffdb",
            "route_table_id": "rtb-0cbdf874f9b4664f7",
            "subnet_id": "subnet-092d774658cd2b71b"
          },
          "dependencies": [
            "aws_internet_gateway.var_gw",
            "aws_route_table.var_r",
            "aws_subnet.var_subnet1",
            "aws_vpc.var_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "var_rta2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09ba3cfad5618dedb",
            "route_table_id": "rtb-085d13fcd9c29505c",
            "subnet_id": "subnet-0c19b4640bb989a7f"
          },
          "dependencies": [
            "aws_subnet.var_subnet2",
            "aws_vpc.var_vpc",
            "aws_eip.var_ip",
            "aws_nat_gateway.var_natgw",
            "aws_route_table.var_rt_nat_gw",
            "aws_subnet.var_subnet1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "var_sglinux1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:108900829372:security-group/sg-0ab39d7e6ef1fc879",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All ports",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ab39d7e6ef1fc879",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "jenikens port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "sglinux1",
            "name_prefix": "",
            "owner_id": "108900829372",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sglinux1"
            },
            "tags_all": {
              "Name": "sglinux1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0feeea6b829b7f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.var_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "var_sglinux2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:108900829372:security-group/sg-039e2c8da5f664c62",
            "description": "Allow inbound traffic",
            "egress": [],
            "id": "sg-039e2c8da5f664c62",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "tomcat port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "sglinux2",
            "name_prefix": "",
            "owner_id": "108900829372",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sglinux2"
            },
            "tags_all": {
              "Name": "sglinux2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a0feeea6b829b7f1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.var_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "var_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:108900829372:subnet/subnet-092d774658cd2b71b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "172.20.10.0/24",
            "id": "subnet-092d774658cd2b71b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "108900829372",
            "tags": {
              "Name": "ee-pub-subnet1"
            },
            "tags_all": {
              "Name": "ee-pub-subnet1"
            },
            "vpc_id": "vpc-0a0feeea6b829b7f1"
          },
          "dependencies": [
            "aws_vpc.var_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "var_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:108900829372:subnet/subnet-0c19b4640bb989a7f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "172.20.20.0/24",
            "id": "subnet-0c19b4640bb989a7f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "108900829372",
            "tags": {
              "Name": "ee-pvt-subnet2"
            },
            "tags_all": {
              "Name": "ee-pvt-subnet2"
            },
            "vpc_id": "vpc-0a0feeea6b829b7f1"
          },
          "dependencies": [
            "aws_vpc.var_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "var_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:108900829372:vpc/vpc-0a0feeea6b829b7f1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.20.0.0/16",
            "default_network_acl_id": "acl-0e38310cc0fd81d65",
            "default_route_table_id": "rtb-073e4df49a12812fa",
            "default_security_group_id": "sg-0fd2bd31b4b44f492",
            "dhcp_options_id": "dopt-0ed27865",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a0feeea6b829b7f1",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-073e4df49a12812fa",
            "owner_id": "108900829372",
            "tags": {
              "Name": "ee-vpc"
            },
            "tags_all": {
              "Name": "ee-vpc"
            }
          }
        }
      ]
    }
  ]
}